fixed the pond video not going half-gray in dark mode

--- a/quartz/components/styles/navbar.scss
+++ b/quartz/components/styles/navbar.scss
@@ -223,8 +223,6 @@
 }
 
 #pond-video {
-  filter: saturate(85%);
-
   // Consistent width and spacing for both img and video
   width: 100%;
   max-width: 100%;
