--- a/quartz/styles/colors.scss
+++ b/quartz/styles/colors.scss
@@ -24,7 +24,9 @@
   --highlight: #949cbb30; // frappeColors.overlay-2 at 20% opacity
 
   & img,
-  & video:not(:has(::backdrop)) {
+  & video:not(:has(::backdrop)),
+  // Unsure why this selector is needed
+  & #pond-video {
     filter: grayscale(50%);
   }
 }
@@ -60,6 +62,10 @@
   & video:not(:has(::backdrop)),
   & iframe:not(:has(::backdrop)) {
     mix-blend-mode: multiply;
+  }
+
+  & #pond-video {
+    filter: saturate(85%);
   }
 }
 
